ministr-tui/tests/snapshots/snapshot__materialize_start.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render_at(&mut app, 120, 36, t0)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────╮                            ╭──────────────────────╮                ╭──────────────────────╮  "
"  │ ministr              │                            │ tock                 │                │ engine               │  "
"  │                      │                            │                      │                │ ● running            │  "
"  │                      │                            │                      │                │ version 0.7.0        │  "
"  │                      │                            │                      │                │ 3 projects           │  "
"  │                      │                            │                      │                ╰──────────────────────╯  "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │                      │                            │                      │                                          "
"  │ up to date           │                            │ needs update         │                                          "
"  │ 812 files            │                            │ 640 files            │                                          "
"  ╰──────────────────────╯                            ╰──────────────────────╯                                          "
"  ← → select   enter open   r rebuild   a add   x remove   q quit                                                       "
