ministr-tui/tests/snapshots/snapshot__meter_glide_mid.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render_at(&mut app, 120, 36, t0 + GLIDE / 2)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────╮                                                                    ╭──────────────────────╮  "
"  │ cohaero              │                                                                    │ engine               │  "
"  │                      │                                                                    │ ● running            │  "
"  │                      │                                                                    │ version 0.7.0        │  "
"  │                      │                                                                    │ 1 project            │  "
"  │                      │                                                                    ╰──────────────────────╯  "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │ ███████████          │                                                                                              "
"  │ updating 55%         │                                                                                              "
"  │ 1204 files           │                                                                                              "
"  ╰──────────────────────╯                                                                                              "
"  ← → select   enter open   r rebuild   a add   x remove   q quit                                                       "
